php-src/tests/classes/interface_constant_inheritance_007.exp
Fatal error: Access type for interface constant A::FOO must be public in %s on line 3