php-src/tests/classes/interface_constant_inheritance_007.php
<?php
interface A {
	private const FOO = 10;
}
